--- a/public/tableauDeBord.html
+++ b/public/tableauDeBord.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tableau de bord</title>
-  <link rel="stylesheet" href="/public/style.css"/>
+  <link rel="stylesheet" href="/public/tableauDeBord.css"/>
   <link rel="icon" href="Image/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
