--- a/public/tableauDeBord.html
+++ b/public/tableauDeBord.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tableau de bord</title>
-  <link rel="stylesheet" href="/public/tableauDeBord.css"/>
-  <link rel="icon" href="Image/Logo1.png">
+  <link rel="stylesheet" href="tableauDeBord.css"/>
+  <link rel="icon" href="images/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,6 @@
   <header>
     <h1>Tableau de bord</h1>
     <div class="Boutonorange">
-      <button class="bouton">Contact</button>
       <button class="bouton">Profil</button>
       <button class="bouton">Déconnexion</button>
     </div>
@@ -22,7 +21,6 @@
 <nav class="navbar">
   <div class="nav-container">
     <ul class="nav-links">
-      <li><a href="#">Accueil</a></li>
       <li><a href="#">Actualités</a></li>
       <li><a href="#">Ateliers</a></li>
       <li><a href="#">Historique</a></li>
@@ -31,7 +29,6 @@
       <li><a href="#">Articles</a></li>
       <li><a href="#">Newsletter</a></li>
       <li><a class="active" href="#">Tableau de bord</a></li>
-      <li><a href="#">À propos</a></li>
     </ul>
   </div>
 </nav>
