modif menu deroulant creation server

--- a/public/newsletter-deroulant.html
+++ b/public/newsletter-deroulant.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envoi de la newsletter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styleNewLetterDeroulant.css">
+    <link rel="stylesheet" href="../public/styleNewLetterDeroulant.css">
 </head>
 <body>
     <div class="live-region" aria-live="polite" aria-atomic="true" id="announcements"></div>
@@ -193,7 +193,7 @@
             announcements.textContent = 'Formulaire réinitialisé.';
         });
        
-        // Navigation au clavier améliorée
+        // Navigation au clavier amélioréet
         document.addEventListener('keydown', function(e) {
             // Raccourci clavier pour activer/désactiver le mode accessibilité (Alt + A)
             if (e.altKey && e.key === 'a') {
