Ajout zoom control

--- a/public/publicationArticle.html
+++ b/public/publicationArticle.html
@@ -7,10 +7,25 @@
   <link rel="stylesheet" href="css/publicationArticle.css" />
   <link rel="icon" href="images/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+   <style>
+    /* Seulement si pas déjà présent dans ton CSS */
+    .sr-only {
+      position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;
+      clip:rect(0 0 0 0);white-space:nowrap;border:0;
+    }
+    .zoom-controls { display:inline-flex; gap:6px; margin-left:10px; }
+  </style>
 </head>
 <body>
+  <div id="announcements" aria-live="polite" class="sr-only"></div>
   <header>
     <h1>Publier un article</h1>
+        <div class="zoom-controls" role="group" aria-label="Contrôle du zoom texte">
+    <button id="zoomIn" class="bouton" aria-label="Augmenter la taille du texte">A+</button>
+    <button id="zoomReset" class="bouton" aria-label="Remettre la taille du texte par défaut">A=</button>
+    <button id="zoomOut" class="bouton" aria-label="Diminuer la taille du texte">A-</button>
+  </div>
+
     <div class="Boutonorange">
       <button class="bouton">Profil</button>
       <button class="bouton">Déconnexion</button>
@@ -49,5 +64,6 @@
       </form>
     </section>
   </main>
+    <script src="javascript/accessibility.js" defer></script>
 </body>
 </html>
